tests/compiler/expected/output/IncompleteTypeError.shtk.txt
MODULE IncompleteTypeError.shtk
ERROR in Line 3 Col 19

    var children: Node[5]
                  ^
INCOMPLETE TYPE can only be a POINTER
